force-app/main/default/objects/ContactAddressJunction__c/ContactAddressJunction__c.object-meta.xml
<CustomObject>
    <label>Record</label>
    <nameField>
        <displayFormat>A-{000000000}</displayFormat>
        <label>ContactAddressJunction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ContactAddressJunction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>