force-app/main/default/objects/ContactAddressJunction__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contact</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>