force-app/main/default/objects/ContactAddressJunction__c/fields/ContactAddressJunctionExternalID__c.field-meta.xml
<CustomField>
    <fullName>ContactAddressJunctionExternalID__c</fullName>
    <externalId>true</externalId>
    <label>ContactAddressJunctionExternalID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>